app/www/style.css
.tab-pane .plotly{
    max-width: 1024px;
    margin-left: auto;
    margin-right: auto;
}

.container-fluid {
    padding: 0;
}

.navbar {
    margin-bottom: 0;
    padding-left: 10px;
}

/* Main Message */
.main-point--container {
    text-align: center;
    font-size: 5rem;
    margin-top: 12rem;
    margin-bottom: 6rem;
    margin-left: auto;
    margin-right: auto;
    max-width: 15em;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.title {
    text-align: center;
    font-size: 5rem;
    margin: auto;
    max-width: 15em;
}

.title-container {
    display: flex;
    width: auto;
    height: 500px;
    background-image: url('wilmington.png');
    background-origin: border-box;
    background-position: center;
    background-repeat: repeat-x;
}


.main-point {
    text-align: center;
    font-size: 4rem;
    margin-top: 12rem;
    margin-bottom: 6rem;
    margin-left: auto;
    margin-right: auto;
    max-width: 15em;
}

.main-point--icon {
    font-size: 8rem
}

.main-point--footnote {
    text-align: center;
    color: gray;
    font-size: 2rem;
    margin-bottom: 6rem;
}


.advoc-table {
    display: flex;
    text-align: center;
    justify-content: center;
}

.advoc-container {
    display: flex;
    text-align: center;
    font-size: 1rem;
    justify-content: center;
}

.comment {
    text-align: center;
    color: gray;
    font-size: 2rem;
    margin-top: 10rem;
    margin-bottom: 10rem;
    margin-left: auto;
    margin-right: auto;
    max-width: 15em;
}

.select-county {
    display: flex;
    justify-content: center;
}

.center-container {
    display: flex;
    justify-content: center;
}

.take-action-container {
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.take-action-card {
    padding: 4rem;
    margin: auto;
    max-width: 100rem;
    display: flex;
    background: #D7F5B5;
    justify-content: center;
    flex-direction: column;
}

.take-action-card-blue {
    padding: 4rem;
    margin: auto;
    max-width: 100rem;
    display: flex;
    background: #CED7F5;
    justify-content: center;
    flex-direction: column;
}

.call-to-action-text {
    text-align: center;
    font-size: 4rem;
    margin-left: auto;
    margin-right: auto;
    max-width: 15em;
}
.call-to-action-text-sub {
    margin-top: 2rem;
    font-size: 2rem;
    max-width: none;
}


.follow-campaign-list {
    text-align: left;
    font-size: 3rem;
    max-width: 15em;
    margin-top: 2rem;
    margin-left: auto;
    margin-right: auto;
}
.follow-campaign-list li {
        margin-top: 1.5rem
}

.follow-housing-authorities-list {
    text-align: left;
    font-size: 2rem;
    max-width: 50rem;
    margin-top: 2rem;
    margin-left: auto;
    margin-right: auto; 
}
.follow-housing-authorities-list li {
    margin-top: 1.5rem;
}

.footer {
    background: rgb(248, 248, 248);;
    padding: 0.5rem;
    margin-top: 10rem;
    min-height: 10rem;
}

.footer-container {
    margin: 2rem;
}

.select-threshold {
    text-align: center;
    display: flex;
    justify-content: center;
}

#prop_county {
    margin: auto;
    max-width: 800px;
}

.learn-more-button {
    background-color: #F27405;
    border-radius: 10px;
    padding: 1rem;
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    font-size: 2rem;
    color: white;
    cursor: pointer;
    margin-top: 8rem;
    margin-bottom: 25rem;
}

.learn-more-button:hover {
    background-color: #F27405;
    color: white;
}

.learn-more-button:active {
    background-color: #D96704;
    color: white;
    border: none;
}

.action-button:hover {
    color: white;
    text-decoration-line: none;
}

.action-button:active {
    color: white;
    text-decoration-line: none;
}

.action-button:focus {
    color: white;
    text-decoration-line: none;
}

